fix: startup validation for ENCRYPTION_KEY/JWT_SECRET length, split CORS origins, logout SameSite=Strict